--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/message_chat_notation.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/message_chat_notation.html.twig
@@ -1,3 +1,3 @@
-<p class="lily-msg-server-title"><%= msg %></p>
+<p class="message-content lily-msg-server-title"><%= msg %></p>
 <i class="lily-chat-notation lily-icon lily-icon-thumb-up lily-cst-icon-thumb-up"></i>
 <i class="lily-chat-notation lily-icon lily-icon-thumb-down lily-cst-icon-thumb-down"></i>
