--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/message_completion.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/message_completion.html.twig
@@ -1,5 +1,5 @@
 <div class="msg-wrapper">
-	<p>Pour quelle raison ?</p>
+	<p class="message-content">Pour quelle raison ?</p>
 	<li class='lily-precision-list lily-completion-incomplete'>La réponse est incomplete</i>
 	<li class='lily-precision-list lily-completion-incorrect'>La réponse était incorrecte</i>
 </li>
