--- a/web/css/front/lily.css
+++ b/web/css/front/lily.css
@@ -1084,95 +1084,6 @@ MESSAGES
       -ms-backface-visibility: hidden;
 }
 
-.avatar-wrapper {
-  position: absolute;
-  z-index: 3;
-  bottom: 76px;
-  left: 13px;
-  width: 75px;
-  height: 75px;
-  -webkit-transition: all .2s ease;
-          transition: all .2s ease;
-  text-align: center;
-  opacity: 1;
-  border-radius: 50%;
-  background: none;
-
-  -webkit-backface-visibility: hidden;
-     -moz-backface-visibility: hidden;
-      -ms-backface-visibility: hidden;
-}
-
-.avatar-wrapper.overlay {
-  z-index: 5;
-}
-
-.avatar-overflowhide {
-  width: 75px;
-  height: 75px;
-  overflow: hidden;
-  border: solid 1px #888888;
-  border-radius: 50%;
-  background: #ffffff;
-}
-
-.avatar-wrapper.overlay[data-msg]:after {
-  content: attr(data-msg);
-  position: relative;
-  z-index: 1000;
-  top: -115%;
-  left: 100%;
-  display: block;
-  width: 202px;
-  max-width: 340%;
-  height: auto;
-  margin-left: 6px;
-  padding: 5px 8.5px 7px;
-  font-size: 15px;
-  line-height: 1.3;
-  text-align: left;
-  border-radius: 10px;
-  background: rgba(238, 206, 207, 1);
-}
-
-.avatar-wrapper.overlay:before {
-  content: "";
-  position: absolute;
-  z-index: 1000;
-  top: 3px;
-  left: 100%;
-  display: inline-block;
-  width: 0;
-  height: 0;
-  margin-left: 0;
-  border-width: 5px 8.7px 5px 0;
-  border-style: solid;
-  border-color: transparent #eececf transparent transparent;
-  background: none;
-}
-
-/* Iphone 6 */
-@media only screen and (min-device-width : 375px) and (max-device-width : 667px) and (orientation : portrait) and (-webkit-min-device-pixel-ratio : 2) {
-  .avatar-wrapper.overlay[data-msg]:after {
-    width: 224px;
-  }
-}
-
-.avatar-wrapper.lily-avi-show {
-  -webkit-animation: bubbleIn .25s cubic-bezier(.25, .1, .13, 1.31) both;
-          animation: bubbleIn .25s cubic-bezier(.25, .1, .13, 1.31) both;
-}
-
-.avatar-wrapper.lily-avi-hide {
-  -webkit-animation: bubbleOut .2s  cubic-bezier(.25, .1, 0, 1.46) both;
-          animation: bubbleOut .2s cubic-bezier(.25, .1, 0, 1.46) both;
-}
-
-.avatar-wrapper .avatar {
-  width: 100%;
-  margin-top: 2px;
-}
-
 .msg-wrapper {
   position: relative;
   display: inline-block;
@@ -1180,11 +1091,15 @@ MESSAGES
   clear: both;
   box-sizing: border-box;
   max-width: 85%;
-  padding: 5.5px 9px 7.5px;
   line-height: 1.3;
   text-align: left;
   text-indent: inherit;
   border-radius: 10px;
+  overflow: hidden;
+}
+
+.msg-wrapper .message-content {
+  padding: 5.5px 9px 7.5px;
 }
 
 .lily-msg-chat-notation {
@@ -1207,6 +1122,26 @@ MESSAGES
 .lily-msg-precision {
   border: solid 1px #888888;
   background: #ffffff;
+}
+
+.lily-empty-wrapper {
+  position: absolute;
+  top: 50%;
+  text-align: center;
+  font-size: 15px;
+  margin-top: -50px;
+  width: calc(100% - 26px);
+}
+
+.lily-on-boarding-title {
+  margin-top: 0;
+  margin-bottom: 10px;
+  font-size: 15px;
+  color: #989898;
+}
+
+.lily-top-question-link {
+  color: rgba(89,168,191,1);
 }
 
 .lily-msg-loading {
@@ -1519,6 +1454,10 @@ MESSAGES
 
 .lily-msg-avatar .msg-wrapper {
   margin-left: 0;
+  width: 100%;
+  max-width: 100%;
+  background: #fff;
+  border: solid 1px rgba(95, 95, 95, 0.2);
 }
 
 .lily-msg {
@@ -1526,14 +1465,6 @@ MESSAGES
   display: none;
   margin-bottom: 13px;
   -webkit-user-select: initial;
-}
-
-.lily-box-messages:after {
-  content: "";
-  position: relative;
-  display: block;
-  width: 100%;
-  height: 75px;
 }
 
 /* Messages of a different type following each other have a
@@ -1567,9 +1498,56 @@ MESSAGES
   margin-left: 3px;
 }
 
-.lily-box-messages .lily-notation-wrapper {
+.lily-notation-wrapper {
   margin-bottom: 5px;
   padding: 0;
+  margin: 0;
+  border-top: 1px solid rgba(95, 95, 95, .2);
+}
+
+.lily-notation-list-item {
+  list-style: none;
+  -webkit-user-drag: none;
+  -webkit-user-select: none;
+  font-style: normal;
+  cursor: pointer;
+  display: inline-block;
+  width: 50%;
+  text-align: center;
+  padding: 7px 8px 8px;
+  font-size: 13px;
+  font-weight: 700;
+  -webkit-font-smoothing: auto;
+}
+
+.lily-notation-list-item .notation-icon {
+  width: 15px;
+  height: 15px;
+  vertical-align: middle;
+}
+
+button.notation-positive:active {
+  background-color: rgba(98, 183, 89, 0.53);
+  color: #fff;
+  outline: none;
+}
+
+button.notation-negative:active {
+  background-color: rgba(232, 78, 78, 0.53);
+  color: #fff;
+  outline: none;
+}
+
+.lily-notation-list-item .notation-icon {
+  fill: #797979;
+}
+
+button.lily-notation-list-item:active .notation-icon {
+  fill: #fff;
+}
+
+.lily-notation-list-item.notation-positive {
+  border-right: solid 1px #DFDFDF;
 }
 
 #lily-chat-notation-wrapper {
