--- a/src/Lily/AppBundle/Resources/views/demo/api.html.twig
+++ b/src/Lily/AppBundle/Resources/views/demo/api.html.twig
@@ -89,8 +89,12 @@ saio.load('548053c9a18e2');
       <h2 class="form-signin-heading">Please sign in</h2>
       <label for="inputEmail" class="sr-only">Email address</label>
       <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+      <label for="inputFirstName" class="sr-only">First name</label>
+      <input type="firstName" id="inputFirstName" class="form-control" placeholder="First name">
+      <label for="inputLastName" class="sr-only">Last name</label>
+      <input type="lastName" id="inputLastName" class="form-control" placeholder="Last name">
       <label for="inputPassword" class="sr-only">Password</label>
-      <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+      <input type="password" id="inputPassword" class="form-control" placeholder="Password">
       <div class="checkbox">
         <label>
           <input type="checkbox" value="remember-me"> Remember me
@@ -133,6 +137,24 @@ saio.load('548053c9a18e2');
         }
       }, 1500);
     }
+
+    $('.form-signin').on('submit', function(ev) {
+      ev.preventDefault();
+      var email = $('#inputEmail').val();
+      var firstName = $('#inputFirstName').val();
+      var lastName = $('#inputLastName').val();
+
+      saio.api('user.identify', {
+        email: email,
+        firstname: firstName,
+        lastname: lastName,
+        customFields: {
+          lang: 'eng',
+          country: 'france',
+          'numéro client': '129893230239'
+        }
+      })
+    });
   </script>
 
 </body>
