--- a/src/Lily/KnowledgeBundle/Resources/views/Questions/Edit/answer.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Questions/Edit/answer.html.twig
@@ -1,116 +1,26 @@
-<% if (questionType) { %>
-  
-  <div class="tree-el title">
-    
-    <div class="tree-el-type <%= questionType %>">
-      <i class="icon-level-up"></i>
-      <span>
-        <%= questionType %>
-      </span>
-    </div>
-    
-    <div class="btn-action">
-      <span class="dropdown-toggle" data-toggle="dropdown">
-        <i class="icon-ellipsis-vertical"></i>
-      </span>
-      <ul class="dropdown-menu">
-    		<li><a class="remove" href="#">Supprimer</a></li>
-    	</ul>
-    </div>
-    
-    <div class="editor" contenteditable="true">
-      <%= title %>
-    </div>
-    
+<div class="parent title">
+  <div class="editor" contenteditable="true">
+    <%= title %>
+  </div>
+</div>
+
+<div class="tree-el answer child">
+
+  <div class="tree-el-type">
+    <i class="icon-level-up"></i>
   </div>
 
-<% } else { %>
-
-  <div class="parent title">
-    <div class="editor" contenteditable="true">
-      <%= title %>
-    </div>
+  <div class="editor" contenteditable="true">
+    <%= answer %>
   </div>
 
-<% } %>
-
-<% if (!answerType) { %>
-
-  <div class="new-answer-type">
-    
-    <button class="btn btn-sm dropdown-toggle" data-toggle="dropdown">
-      Sélectionner un type
-      <span class="caret"></span>
+  <div class="toolbar">
+    <button class="btn btn-sm btn-toolbar" data-command-name="bold">
+      <i class="icon-bold"></i>
     </button>
-    <ul class="dropdown-menu">
-  		<li>
-  		  <a href="#" data-type="precision">Une demande de précision</a>
-  		</li>
-  		<li>
-  		  <a href="#" data-type="answer">Une réponse</a>
-  		</li>
-    </ul>
+    <button class="btn btn-sm btn-toolbar" data-command-name="linkPrompt">
+      <i class="icon-external-link"></i>
+    </button>
   </div>
-  
-<% } else { %>
-    
-  <div class="tree-el answer child">
-    
-    <div class="tree-el-type <%= answerType %>">
-      <i class="icon-level-up"></i>
-      <span><%= translated.answerType %></span>
-    </div>
-    
-    <div class="btn-collapse">
-      <i class="icon-minus-sign-alt collapse hide"></i>
-      <i class="icon-plus-sign-alt expand hide"></i>
-    </div>
-    
-    <div class="btn-action">
-      <span class="dropdown-toggle" data-toggle="dropdown">
-        <i class="icon-ellipsis-vertical"></i>
-      </span>
-      <ul class="dropdown-menu">
-        <% if (answerType === 'precision') { %>
-          <li class="dropdown-submenu">
-            <a href="#" data-toggle="dropdown">
-              <i class="icon-caret-left pull-left"></i>
-              <span>Ajouter</span>
-            </a>
-            <ul class="dropdown-menu add-action">
-  	      		<li><a href="#" data-nb="1">1 action</a></li>
-              <li><a href="#" data-nb="2">2 actions</a></li>
-              <li><a href="#" data-nb="3">3 actions</a></li>
-  	      	</ul>
-          </li>
-        <% } %>
-    		<li>
-    		  <a class="clear-answer" href="#">
-      		  <span>Supprimer<span>
-      		</a>
-    		</li>
-    	</ul>
-    </div>
-    
-    <div class="editor" contenteditable="true">
-      <%= answer %>
-    </div>
-      
-    <% if (answerType == 'answer') { %>
-      
-      <div class="toolbar">
-        <button class="btn btn-sm btn-toolbar" data-command-name="bold">
-          <i class="icon-bold"></i>
-        </button>
-        <button class="btn btn-sm btn-toolbar" data-command-name="linkPrompt">
-          <i class="icon-external-link"></i>
-        </button>
-      </div>
-      
-    <% } %>
 
-  </div>
-    
-<% } %>
-
-<ul class="js-tree-el-children tree-children"></ul>
+</div>
