on boarding no top questions yet, message should be wrapped in a div to avoid message markup breaking the html struct

--- a/src/Lily/AppBundle/Resources/views/demo/api.html.twig
+++ b/src/Lily/AppBundle/Resources/views/demo/api.html.twig
@@ -30,7 +30,7 @@ var o=document.getElementsByTagName("script")[0];o.parentNode.insertBefore(e,o)}
 
 // Load saio with your key, which will automatically
 // load the tools you've enabled for your account.
-saio.load('548053c9a18e2');
+saio.load('{{licence}}');
 
 // Call saio api methods from here
 // ex: saio.api('widget.show', false);
