--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/message_user.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/message_user.html.twig
@@ -1,3 +1,3 @@
 <div class="msg-wrapper">
-	<p class="message-content"><%= messageContent %></p>
+	<div class="message-content"><%= messageContent %></div>
 </div>
