remove knowledgeBase references when not allowed or client doesn't has it

--- a/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/informations.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/informations.html.twig
@@ -71,6 +71,7 @@
   </div>
 </div>
 
+{% if app.user.client.config.avi %}
 <div class="search-panel">
   <div class="header-search header-collapsible">
     <h5>BASE DE CONNAISSANCE</h5>
@@ -80,3 +81,4 @@
 
   <!-- Here go the search view -->
 </div>
+{% endif %}
