--- a/web/css/front/lily.css
+++ b/web/css/front/lily.css
@@ -1000,7 +1000,26 @@ Typeahead Styles
 }
 
 .tt-pending {
-  padding-right: 15px;
+  padding: 10px 15px;
+  padding-right: 30px;
+  font-size: 15px;
+  line-height: 1.3;
+  position: relative;
+}
+
+.tt-not-found {
+  padding: 10px 15px;
+  font-size: 15px;
+  line-height: 1.3;
+  position: relative;
+  background-color: #F3F3F3;
+}
+
+.tt-not-found-note {
+  margin-top: 5px;
+  padding-top: 5px;
+  border-top: solid 1px #D2D2D2;
+  color: #6B6B6B;
 }
 
 .tt-highlight {
@@ -1529,6 +1548,7 @@ MESSAGES
   font-size: 13px;
   font-weight: 700;
   -webkit-font-smoothing: auto;
+  outline: none;
 }
 
 .lily-notation-list-item .notation-icon {
@@ -1537,13 +1557,13 @@ MESSAGES
   vertical-align: middle;
 }
 
-button.notation-positive:active {
+.notation-positive.active {
   background-color: rgba(98, 183, 89, 0.53);
   color: #fff;
   outline: none;
 }
 
-button.notation-negative:active {
+.notation-negative.active {
   background-color: rgba(232, 78, 78, 0.53);
   color: #fff;
   outline: none;
@@ -1553,7 +1573,7 @@ button.notation-negative:active {
   fill: #797979;
 }
 
-button.lily-notation-list-item:active .notation-icon {
+.lily-notation-list-item.active .notation-icon {
   fill: #fff;
 }
 
