phone and mail redirection + config refactoring

--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/base.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/base.html.twig
@@ -13,7 +13,7 @@
         <% if (avi.active) { %>
         <li>
           <a href="#/avi" target="_self">
-            <span class='lily-icon lily-icon-avatar'></span>Agent virtuel
+            <span class='lily-icon lily-icon-avatar'></span>Poser une question
           </a>
         </li>
         <% } %>
@@ -37,7 +37,7 @@
         <% if (avi.redirections.phone) { %>
         <li>
           <a href="#/tel" data-reverse="true" target="_self">
-            <span class='lily-icon lily-icon-phone'></span>Nous téléphoner
+            <span class='lily-icon lily-icon-phone'></span>Se faire rappeler
           </a>
         </li>
         <% } %>
