--- a/web/css/front/lily.css
+++ b/web/css/front/lily.css
@@ -926,10 +926,6 @@ HEADER
   -webkit-user-drag: none;
 }
 
-.placeholder {
-  color: rgba(64, 64, 64, 0.7);
-}
-
 .lily-search-input:active,
 .lily-search-input:focus {
   opacity: .95;
@@ -939,18 +935,21 @@ HEADER
 }
 
 :-moz-placeholder {
-  color: rgba(64, 64, 64, 0.7);
+  color: rgba(64, 64, 64, 0.6);
 }
 ::-moz-placeholder {
-  color: rgba(64, 64, 64, 0.7);
+  color: rgba(64, 64, 64, 0.6);
 }
 :ms-input-placeholder {
-  color: rgba(64, 64, 64, 0.7);
+  color: rgba(64, 64, 64, 0.6);
 }
 ::-webkit-input-placeholder {
-  color: rgba(64, 64, 64, 0.7);
+  color: rgba(64, 64, 64, 0.6);
 }
 
+.placeholder {
+  color: rgba(64, 64, 64, 0.6);
+}
 
 .lily-search-submit {
   position: absolute;
@@ -1986,25 +1985,49 @@ SNAP.JS
 CONTACT FORM
 *******************/
 
-.btn-close {
+.form-header-wrapper {
+  margin: -15px -12px 0 -12px;
+  padding: 10px 12px 0;
+}
+
+.form-header-wrapper .form-section-title {
+  text-align: center;
+  font-size: 16px;
+  font-weight: 700;
+  margin: 0 0 1em 0;
+  padding: 0 35px;
+  line-height: 1.1;
+  border-bottom: none;
+}
+
+.lily-contact-form .btn-close {
   position: absolute;
-  z-index: 5;
-  top: 7px;
-  right: 8px;
+  top: 8px;
+  right: 12px;
   width: 30px;
   height: 30px;
   cursor: pointer;
   border-radius: 100%;
-  border: solid 1px rgba(58, 58, 58, 0.18);
+  border: 1px solid rgb(208, 208, 208);
   color: #505050;
   margin-top: 3px;
+  z-index: 3;
+  background: #fff;
+  font-size: 15px;
 }
 
 .lily-contact-form .form-micro-copy {
-  font-size: 15px;
-  font-style: italic;
-  padding-right: 30px;
-  margin-top: 0;
+  font-size: 13.5px;
+  line-height: 1.2;
+  color: rgb(123, 123, 123);
+}
+
+.lily-contact-form .copy-onboarding {
+  font-size: 13px;
+  padding: 0 45px 0 12px;
+  margin-left: -12px;
+  margin-right: -12px;
+  font-style: normal;
 }
 
 .lily-contact-form {
@@ -2016,9 +2039,84 @@ CONTACT FORM
   color: #404040;
 }
 
-.contact-form-item {
+.validation-error-inline {
+  display: none;
+  color: #373a3c;
+  font-size: 13.5px;
+  line-height: 1.3;
+  margin-bottom: 8px;
+  margin-top: 6px;
+  padding: 3px 5px;
+  border-radius: 3px;
+  background: rgba(217, 83, 79, 0.35);
+  position: relative;
+}
+
+.validation-error-inline:after {
+  content: "";
+  position: absolute;
+  bottom: -5px;
+  left: 16px;
+  border-width: 5px 6px 0;
+  border-style: solid;
+  border-color: rgba(217, 83, 79, 0.35) transparent;
+  display: block;
+  width: 0;
+  margin-left: -5px;
+}
+
+.contact-form-item.is-invalid .validation-error-inline {
+  display: inline-block;
+}
+
+.contact-form-item.is-invalid .form-input {
+  border: solid 1px #D9534F;
+}
+
+.contact-form-item.is-valid .form-input {
+  border: solid 1px #5CB85C;
+}
+
+.contact-form-list {
+  margin-top: 12px;
+}
+
+.redirection-type-switch-wrapper {
   margin-top: 10px;
+  color: #797979;
+  line-height: 1.2;
+}
+
+.lily-contact-form .contact-form-item:first-child {
+  margin-top: 12px;
+}
+
+.contact-form-item {
+  margin-top: 7px;
   font-weight: 700;
+  position: relative;
+}
+
+.input-wrapper {
+  position: relative;
+}
+
+.contact-form-item .svg-icon-wrapper {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 4px;
+  left: 3px;
+}
+
+.contact-form-item .svg-icon {
+  fill: #5A5A5A;
+  padding: 7.5px;
+}
+
+.contact-form-item .svg-icon.date-icon,
+.contact-form-item .svg-icon.email-icon {
+  padding: 0;
 }
 
 .contact-form-item .form-input {
@@ -2028,7 +2126,7 @@ CONTACT FORM
      -moz-box-sizing: border-box;
   width: 100%;
   height: 40px;
-  padding-left: 8px;
+  padding-left: 32px;
   font-size: 14px;
   line-height: 18px;
   border-radius: 3px;
@@ -2040,6 +2138,7 @@ CONTACT FORM
   appearance: none;
   border: solid 1px rgba(121, 121, 121, 0.35);
   color: #515151;
+  background: #F8F8F8;;
 }
 
 .lily-contact-form .form-input.valid {
@@ -2065,18 +2164,19 @@ CONTACT FORM
 
 .lily-contact-form textarea {
   min-height: 80px;
-  padding-top: 5px;
+  padding-top: 9px;
   line-height: 25px;
 }
 
-.lily-contact-form button {
+.lily-contact-form .btn-submit {
   display: block;
   width: 100%;
   margin-top: 15px;
   margin-bottom: 15px;
   padding-top: 5px;
   line-height: 20px;
-  padding: 8px;
+  font-size: 16px;
+  padding: 0;
   text-align: center;
   border: none;
   border-radius: 3px;
@@ -2091,8 +2191,8 @@ CONTACT FORM
   content: "\02715"; /* Cross for error */
 }
 
-.progress-button.state-success .content::before,
-.progress-button.state-error .content::after {
+.progress-button.state-success .content:before,
+.progress-button.state-error .content:after {
   opacity: 1;
 }
 
@@ -2135,6 +2235,7 @@ CONTACT FORM
   display: block;
   z-index: 10;
   line-height: 1.1;
+  padding: 13px 0;
   height: 100%;
   vertical-align: middle;
   -webkit-transition: -webkit-transform 0.3s;
@@ -2153,6 +2254,7 @@ CONTACT FORM
   right: auto;
   left: 50%;
   opacity: 0;
+  padding: 12px 0;
   -webkit-transition: opacity 0.3s;
   transition: opacity 0.3s;
   -webkit-transform: translateX(-50%);
