--- a/web/css/front/lily.css
+++ b/web/css/front/lily.css
@@ -1136,11 +1136,6 @@ MESSAGES
   text-align: center;
 }
 
-.lily-msg-user .msg-wrapper,
-.lily-msg-chat-visitor .msg-wrapper {
-  background: #e5e5e5;
-}
-
 .lily-msg-precision {
   background: #ffffff;
 }
@@ -1492,6 +1487,11 @@ MESSAGES
   max-width: 100%;
   background: #fff;
   border: solid 1px rgba(95, 95, 95, 0.2);
+}
+
+.lily-msg-chat-operator .msg-wrapper {
+  overflow: visible;
+  background: #e5e5e5;
 }
 
 .lily-msg {
