minor fixes to email redirection + new html email template

--- a/src/Lily/AppBundle/Resources/views/themes/lily/templates/mail.html.twig
+++ b/src/Lily/AppBundle/Resources/views/themes/lily/templates/mail.html.twig
@@ -71,16 +71,16 @@
           <div class="input-wrapper">
             <select class="form-input form-time" name="time">
               <option value="" selected="selected"><%= formTimePlaceholder %></option>
-              <option value="9h_10h">entre 09h et 10h</option>
-              <option value="10h_11h">entre 10h et 11h</option>
-              <option value="11h_12h">entre 11h et 12h</option>
-              <option value="12h_13h">entre 12h et 13h</option>
-              <option value="13h_14h">entre 13h et 14h</option>
-              <option value="14h_15h">entre 14h et 15h</option>
-              <option value="15h_16h">entre 15h et 16h</option>
-              <option value="16h_17h">entre 16h et 17h</option>
-              <option value="17h_18h">entre 17h et 18h</option>
-              <option value="18h_19h">entre 18h et 19h</option>
+              <option value="entre 09h et 10h">entre 09h et 10h</option>
+              <option value="entre 09h et 10h">entre 09h et 10h</option>
+              <option value="entre 11h et 12h">entre 11h et 12h</option>
+              <option value="entre 12h et 13h">entre 12h et 13h</option>
+              <option value="entre 13h et 14h">entre 13h et 14h</option>
+              <option value="entre 14h et 15h">entre 14h et 15h</option>
+              <option value="entre 15h et 16h">entre 15h et 16h</option>
+              <option value="entre 16h et 17h">entre 16h et 17h</option>
+              <option value="entre 17h et 18h">entre 17h et 18h</option>
+              <option value="entre 18h et 19h">entre 18h et 19h</option>
             </select>
             <div class="svg-icon-wrapper">
               <svg class="svg-icon time-icon" xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 612 612"><path d="M587.6 187c-32.3-75.3-87-130-163-162.4C386.6 8.4 347 .2 305.6.2c-41.6 0-81 8-119 24.4C111.6 57 56.4 111.6 24 187 8 224.4 0 264 0 305.5s8 81.3 24 119C56.4 500 111.5 555 186.7 587.3c38 16.3 77.3 24.4 118.8 24.4s81.2-8.2 119-24.4c76-32.3 130.8-87.4 163-162.6 16.3-38 24.5-77.6 24.5-119 0-41.6-8.2-81-24.4-119zm-49 254c-24 41-56.8 73.7-98.3 98-41 24-86.3 36-134.8 36-36.5 0-71.3-7-104.4-21.4-33-14.4-61-33.3-85-57.2-24-24-43-52.8-57-86-14-33-21-68.3-21-104.7-1-48.7 11-93.5 35-134.5 24-41.3 57-74 98-98C212 49 257 37 305.8 37S399 49 440.3 73c41.5 24.3 74.3 57 98.4 98.2 24 41 36.2 86 36.2 134.5s-12 93.7-37 135.3z"/><path d="M325 303V129.7c0-10.4-9-18.8-19.5-18.8-9.7 0-18.4 8-18.4 18v176s1 1.3 1 2.3c0 6 1 11 5 15l100 100c7 7 19 7 26 0 8-7.5 7-18.7 0-26l-94-94z"/></svg>
