--- a/src/Lily/AppBundle/Resources/views/demo/api.html.twig
+++ b/src/Lily/AppBundle/Resources/views/demo/api.html.twig
@@ -11,13 +11,12 @@ e[r]=e.factory(r)}e.load=function(t){var e=document.createElement("script");e.ty
 var o=document.getElementsByTagName("script")[0];o.parentNode.insertBefore(e,o)},e.SNIPPET_VERSION="1.0.0"
 }}(this);
 
-saio.config('chat.setOperatorGroup', '60', false);
-
 // Load saio with your key, which will automatically
 // load the tools you've enabled for your account.
 saio.load('548053c9a18e2');
 
 // Call saio api methods from here
+// ex: saio.api('widget.show', false);
 </script>
 
     <meta charset="utf-8">
