--- a/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/Message/operator.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/Message/operator.html.twig
@@ -1,5 +1,4 @@
-<% var globals = require('globals');
-  if (operator && operator.id != globals.userId) { %>
+<% if (operator && operator.id != userId) { %>
     <span class="pull-left thumb-sm img-circle">
       <img src="<%= operator.avatar %>" alt="avatar" class="avatar-thumb">
     </span>
