--- a/app/Resources/views/mails/redirection.html.twig
+++ b/app/Resources/views/mails/redirection.html.twig
@@ -609,72 +609,27 @@
                                 <tbody>
                                   <tr>
                                     <td class="mcnTextContent" style=
-                                    "padding-top:0; padding-right: 18px; padding-bottom:0; padding-left: 18px;"
-                                    valign="top">
-                                      <div style="text-align: left;">
-                                        <br />
-                                        <p style=
-                                        "font-family:arial,helvetica neue,helvetica,sans-serif;font-size:16px;color:#555555;margin:0;">Vous avez reçu un message
-                                        {% if email is not null %} de <strong>{{email}}</strong>{% endif %} depuis l'application SAIO:</p>
-                                        <br />
-                                      </div>
-                                    </td>
-                                  </tr>
-                                </tbody>
-                              </table>
-                            </td>
-                          </tr>
-                          <tr>
-                            <td class="mcnDividerBlockInner" style="padding: 5px 18px 0;">
-                              <table border="0" cellpadding="0" cellspacing="0" class=
-                              "mcnDividerContent" style=
-                              "border-top-width: 1px;border-top-style: solid;border-top-color: #DCDCDC;"
-                              width="100%">
-                                <tbody>
-                                  <tr>
-                                    <td><span></span>
-                                    </td>
-                                  </tr>
-                                </tbody>
-                              </table>
-                            </td>
-                          </tr>
-                        </tbody>
-                      </table>
-
-                      <table border="0" cellpadding="0" cellspacing="0" class="mcnTextBlock" width=
-                      "100%">
-                        <tbody class="mcnTextBlockOuter">
-                          <tr>
-                            <td class="mcnTextBlockInner" valign="top">
-                              <table align="left" border="0" cellpadding="0" cellspacing="0" class=
-                              "mcnTextContentContainer" width="600">
-                                <tbody>
-                                  <tr>
-                                    <td class="mcnTextContent" style=
                                     "padding-top:9px; padding-right: 18px; padding-bottom: 9px; padding-left: 18px; color:#555555;"
                                     valign="top">
                                       <div style="text-align: left;">
                                         <br />
                                         <span style="font-size:14px">
-                                          <p style=
-                                        "font-family:arial,helvetica neue,helvetica,sans-serif;color:#555555;margin:0;">
+                                          <p style="font-family:arial,helvetica neue,helvetica,sans-serif;color:#555555;margin:0;">
 
                                           {% if email is not null %}
-                                          Bonjour, Vous avez reçu un nouveau message de la part de {{email}}.
+                                          Bonjour, Vous avez reçu un nouveau message de la part de <strong>{{email}}</strong>:
                                           {% else %}
-                                          Bonjour, un visiteur vous a envoyé un message depuis votre application SAIO.
+                                          Bonjour, un visiteur vous a envoyé un message depuis votre application SAIO:
                                           {% endif %}
                                           </p>
 
-                                          <p style="font-family:arial,helvetica neue,helvetica,sans-serif;color:#555555;margin:0;">Le message est le suivant :
-                                          </p>
-
-                                          <div style="margin-top:30px; margin-bottom: 30px; padding-left:20px;border-left-width:5px;border-left-style:solid;border-left-color:#cecece;color:#555555;">
+                                          {% if message is not null %}
+                                          <div style="margin-top:30px; margin-bottom: 30px; padding-left:15px;border-left-width:5px;border-left-style:solid;border-left-color:#cecece;color:#555555;">
                                             <quote>
-                                              {{ message }}
+                                              {{message}}
                                             </quote>
                                           </div>
+                                          {% endif %}
 
                                           {% if tel is not null %}
                                           <p style="font-family:arial,helvetica neue,helvetica,sans-serif;color:#555555!important;margin:0;">Ce visiteur souhaite être recontacté par téléphone au <strong>{{tel}}</strong>
