emphasize callback section if exists

--- a/app/Resources/views/mails/redirection.html.twig
+++ b/app/Resources/views/mails/redirection.html.twig
@@ -634,7 +634,7 @@
                                           {% endif %}
 
                                           {% if tel is not null %}
-                                          <p style="font-family:arial,helvetica neue,helvetica,sans-serif;color:#555555!important;margin:0;">Ce visiteur souhaite être recontacté par téléphone au <strong>{{tel}}</strong>
+                                          <p style="font-family:arial,helvetica neue,helvetica,sans-serif;color:#555555!important;margin:0;padding: 10px 15px;background-color:#FFF9C9;border-radius: 10px;">Ce visiteur souhaite être recontacté par téléphone au <strong>{{tel}}</strong>
 
                                             {% if date is not null and time is not null %}
                                             <span style="color:#555555;margin:0;">, de préférence le <strong>{{date}}</strong>, <strong>{{time}}</strong>.</span>
