--- a/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/Message/server.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/Message/server.html.twig
@@ -1,10 +1,1 @@
-<% 
-var date = moment(date*1000);
-switch (action) {
-  case 'startChat': %>
-	  Conversation commencée le <%= date.format('DD MMMM') %> à <%= date.format('HH:mm') %>.
-  <% break;
-  case 'transfered': %>
-	  Conversation transférée le <%= date.format('DD MMMM') %> à <%= date.format('HH:mm') %>.
-  <% break;
-} %>
+<%= msg %>
