--- a/src/Lily/AppBundle/Resources/views/demo/api.html.twig
+++ b/src/Lily/AppBundle/Resources/views/demo/api.html.twig
@@ -17,6 +17,14 @@ saio.config('chat.setOperatorGroup', '60', false);
 // load the tools you've enabled for your account.
 saio.load('548053c9a18e2');
 
+saio.api('user.identify', {
+  firstname: '',
+  lastname: '',
+  email: '',
+  customFields: {
+    'code courtier': 'I05000'
+  }
+});
 // Call saio api methods from here
 </script>
 
