sdk hide calls should have precehence over natural behaviour

--- a/src/Lily/AppBundle/Resources/views/demo/api.html.twig
+++ b/src/Lily/AppBundle/Resources/views/demo/api.html.twig
@@ -17,6 +17,8 @@ saio.config('chat.setOperatorGroup', '60', false);
 // load the tools you've enabled for your account.
 saio.load('548053c9a18e2');
 
+saio.api('widget.hide');
+
 saio.api('user.identify', {
   firstname: '',
   lastname: '',
